--- a/views/coding.ejs
+++ b/views/coding.ejs
@@ -29,6 +29,173 @@
 				<li><a href="/about" class="animsition-link">About</li></a>
 			</ul>
 		</header>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1 style="text-align:center;font-size:3.5vw; margin-top:4%;margin-bottom:4%;">Coding Projects</h1>
+				</div>
+			</div>
+			<div class="row" style="margin-bottom:4%;">
+				<div class="col-md-6">
+					<div class="codeimage sixth">
+						<img src="/images/code1.png" style="height:300px;width=500px;">
+						<div class="codemask"></div>
+						<div class="codecontent">
+							<h2>adSCOPE</h2>
+							<p>adSCOPE, a personal project built using the MEAN stack</p>
+							<a data-toggle="modal" data-target="#myModal7" class="codeinfo">Check it out!</a>
+						</div>
+						<div class="modal fade" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						  <div class="modal-dialog modal-lg">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						        <h3 class="modal-title" id="myModalLabel">adSCOPE</h3>
+						        <h5>adSCOPE is a personal project I thought of working on based on my marketing background. Basically the idea is for companies to pay a small amount to regular people that use social media/blogs to share the company's posts. That's all I'll divulge, but email me if you would like to know more on how it works! The page itself is a single page applicaiton built on AngularJS. Right now the only feature that's working is the login and registration using Passport to secure the url. </h5>
+						      </div>
+						      <div class="modal-body">
+						        <div class="container-fluid">
+						        	<div class="row" style="margin-bottom:20px;">
+						        		<div class="col-md-12">
+						        			<div class="adimage">
+						        				<h5>Backend: Node.js server with NGINX, Express framework, Passport module for login verification, MongoDB database</h5>
+						        				<h5>Frontend: AngularJS, Bootstrap CSS, JQuery, Javascript, HTML</h5>
+						        				<iframe src="http://www.adscope.info" style="width:760px;height:500px;"></iframe>
+						        			</div>					
+						        		</div>
+						        	</div>					        					        	
+						        </div>
+						      </div>
+						      <div class="modal-footer" style="text-align:center;">
+						      	<a href="http://www.adscope.info"><button type="button" class="btn btn-primary">Go there!</button></a>
+						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="codeimage sixth">
+						<img src="/images/code2.png" style="height:300px;width=500px;">
+						<div class="codemask"></div>
+						<div class="codecontent">
+							<h2>MBR Foods</h2>
+							<p>An ecommerce project built on the LAMP stack</p>
+							<a data-toggle="modal" data-target="#myModal8" class="codeinfo">Check it out!</a>
+						</div>
+						<div class="modal fade" id="myModal8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						  <div class="modal-dialog modal-lg">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						        <h3 class="modal-title" id="myModalLabel">MBR Foods</h3>
+						        <h5>MBR Foods is an ecommerce site built on the LAMP stack. The CSS may be a bit rough, but everything is working except I disabled the ability to place an order. The navbar is also persistant so it knows if you're logged in or not. If you want to play around with the admin features to add/edit an item, please let me know and I'll give you the login. You may want to open this one in a full window, since it's not mobile optimized.</h5>
+						      </div>
+						      <div class="modal-body">
+						        <div class="container-fluid">
+						        	<div class="row" style="margin-bottom:20px;">
+						        		<div class="col-md-12">
+						        			<div class="adimage">
+						        				<h5>Backend: Apache server, PHP, CodeIgniter framework, MySQL database</h5>
+						        				<h5>Frontend: Bootstrap CSS, JQuery, Javascript, HTML</h5>
+						        				<iframe src="http://52.8.119.57/" style="width:760px;height:500px;"></iframe>
+						        			</div>					
+						        		</div>
+						        	</div>					        					        	
+						        </div>
+						      </div>
+						      <div class="modal-footer" style="text-align:center;">
+						      	<a href="http://52.8.119.57/"><button type="button" class="btn btn-primary">Go there!</button></a>
+						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" style="margin-bottom:4%;">
+				<div class="col-md-6">
+					<div class="codeimage sixth">
+						<img src="/images/code3.png" style="height:300px;width=500px;">
+						<div class="codemask"></div>
+						<div class="codecontent">
+							<h2>MBR Foods MEAN</h2>
+							<p>An alternate take on the MBR Foods dashboard using AngularJS and MongoDB</p>
+							<a data-toggle="modal" data-target="#myModal9" class="codeinfo">Check it out!</a>
+						</div>
+						<div class="modal fade" id="myModal9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						  <div class="modal-dialog modal-lg">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						        <h3 class="modal-title" id="myModalLabel">MBR Foods MEAN Dashboard</h3>
+						        <h5>An alternate take on the MBR Foods dashboard, this time built on Angular and using MongoDB. You can go ahead and use the search bar, add a customer, place orders, or even add new products. Since it's Angular, everything is updated in real time.</h5>
+						      </div>
+						      <div class="modal-body">
+						        <div class="container-fluid">
+						        	<div class="row" style="margin-bottom:20px;">
+						        		<div class="col-md-12">
+						        			<div class="adimage">
+						        				<h5>Backend: Node.js server with NGINX, Express framework, MongoDB database</h5>
+						        				<h5>Frontend: AngularJS, Skeleton CSS, HTML</h5>
+						        				<iframe src="http://www.bentsao.org" style="width:760px;height:500px;"></iframe>
+						        			</div>					
+						        		</div>
+						        	</div>					        					        	
+						        </div>
+						      </div>
+						      <div class="modal-footer" style="text-align:center;">
+						      	<a href="http://www.bentsao.org"><button type="button" class="btn btn-primary">Go there!</button></a>
+						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="codeimage sixth">
+						<img src="/images/code4.png" style="height:300px;width=500px;">
+						<div class="codemask"></div>
+						<div class="codecontent">
+							<h2>Socket Chat</h2>
+							<p>A simple lightweight chat app built on node and sockets</p>
+							<a data-toggle="modal" data-target="#myModal10" class="codeinfo">Check it out!</a>
+						</div>
+						<div class="modal fade" id="myModal10" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						  <div class="modal-dialog modal-lg">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						        <h3 class="modal-title" id="myModalLabel">Socket Chat</h3>
+						        <h5>A simple lightweight chat room using sockets. Not much else to it. Since it prompts for your name, I won't iframe this one, so click the link directly. Open multiple windows to test!</h5>
+						      </div>
+						      <div class="modal-body">
+						        <div class="container-fluid">
+						        	<div class="row" style="margin-bottom:20px;">
+						        		<div class="col-md-12">
+						        			<div class="adimage">
+						        				<h5>Backend: Node.js server with NGINX, Express framework, EJS view engine, Socket.io</h5>
+						        				<h5>Frontend: JQuery, Skeleton CSS, HTML</h5>
+						        				<!-- <iframe src="http://www.bentsao.info" style="width:760px;height:500px;"></iframe> -->
+						        			</div>					
+						        		</div>
+						        	</div>					        					        	
+						        </div>
+						      </div>
+						      <div class="modal-footer" style="text-align:center;">
+						      	<a href="http://www.bentsao.info"><button type="button" class="btn btn-primary">Go there!</button></a>
+						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<footer class="footer">
 			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a></h5>
 		 	<h5>Copyright &copy 2015 Ben Tsao</h5>
