--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 style="font-weight:300; font-size:3.5vw;margin-top:7%;margin-bottom:4%;">Hello, welcome to my page! Here you can see my portfolio for some of my marketing work and coding projects</h2>
+						<h2 style="font-weight:300; font-size:3.5vw;margin-top:7%;margin-bottom:4%;">Hello, welcome to my page! You can check out my portfolio below for some of my marketing work and coding projects</h2>
 					</div>
 				</div>
 				<div class="row">
