--- a/static/style.css
+++ b/static/style.css
@@ -68,25 +68,27 @@ header a:hover{
 	background-size: cover;
 	margin: 0 auto;
 	margin-bottom: 10%;
-	-webkit-box-shadow: 4px 4px 4px black;
-    -moz-box-shadow: 4px 4px 4px black;
-	box-shadow: 4px 4px 4px black;
+	box-shadow: 0px 0px 10px black;
 	transition: all 0.4s ease;
 }
 .mask{
-	/*position: absolute;*/
-	height: 350px;
-	width: 400px;
-	border: 175px solid rgba(0, 0, 0, 0.7);
-	box-sizing:border-box;
-	opacity:1;
-	visibility:visible;
-	transition:all 0.3s ease-in-out;
+   width:400px;
+   height: 350px;
+   overflow: visible;
+   opacity: 0;
+   border:175px solid rgba(0,0,0,0.7);
+   -moz-box-sizing:border-box;
+   -webkit-box-sizing:border-box;
+   box-sizing:border-box;
+   -webkit-transition: all 0.4s ease-in-out;
+   -moz-transition: all 0.4s ease-in-out;
+   -o-transition: all 0.4s ease-in-out;
+   -ms-transition: all 0.4s ease-in-out;
+   transition: all 0.4s ease-in-out;
 }
 #marketing:hover .mask{
-	opacity: 0;
-	border:0px solid rgba(0,0,0,0.7);
-	visibility:hidden;
+	opacity: 1;
+   	border:175px solid rgba(0,0,0,0.7);
 }
 #coding{
 	height: 350px;
@@ -96,15 +98,12 @@ header a:hover{
 	background-size: cover;
 	margin: 0 auto;
 	margin-bottom: 10%;
-	-webkit-box-shadow: 4px 4px 4px black;
-    -moz-box-shadow: 4px 4px 4px black;
-	box-shadow: 4px 4px 4px black;
+	box-shadow: 0px 0px 10px black;
 	transition: all 0.4s ease;
 }
 #coding:hover .mask{
-	opacity: 0;
-	border:0px solid rgba(0,0,0,0.7);
-	visibility:hidden;
+	opacity: 1;
+   	border:175px solid rgba(0,0,0,0.7);
 }
 .adimage img{
 	margin: auto;
@@ -127,4 +126,32 @@ header a:hover{
 .footer h5{
 	color: gray;
 	margin-top: 20px;
+}
+.readmore {
+ -webkit-animation: color_change 1s infinite alternate;
+ -moz-animation: color_change 1s infinite alternate;
+ -ms-animation: color_change 1s infinite alternate;
+ -o-animation: color_change 1s infinite alternate;
+ animation: color_change 1s infinite alternate;
+}
+
+@-webkit-keyframes color_change {
+ from { color: white; }
+ to { color: gray; }
+}
+@-moz-keyframes color_change {
+ from { color: white; }
+ to { color: gray; }
+}
+@-ms-keyframes color_change {
+ from { color: white; }
+ to { color: gray; }
+}
+@-o-keyframes color_change {
+ from { color: white; }
+ to { color: gray; }
+}
+@keyframes color_change {
+ from { color: white; }
+ to { color: gray; }
 }
