--- a/static/hover.css
+++ b/static/hover.css
@@ -7,11 +7,10 @@
    overflow: hidden;
    position: relative;
    text-align: center;
-   -webkit-box-shadow: 1px 1px 2px #e6e6e6;
-   -moz-box-shadow: 1px 1px 2px #e6e6e6;
-   box-shadow: 1px 1px 2px #e6e6e6;
+   -webkit-box-shadow: 1px 1px 3px #aaa;
+   -moz-box-shadow: 1px 1px 3px #aaa;
+   box-shadow: 1px 1px 3px #aaa;
    cursor: default;
-   /*background: #fff url(../images/bgimg.jpg) no-repeat center center;*/
 }
 .markimage .markmask,.markimage .markcontent {
    width: 300px;
@@ -28,9 +27,10 @@
 .markimage h2 {
    text-transform: uppercase;
    color: #fff;
+   text-shadow: 0px 0px 2px black;
    text-align: center;
    position: relative;
-   font-size: 17px;
+   font-size: 20px;
    padding: 10px;
    background: rgba(0, 0, 0, 0.8);
    margin: 20px 0 0 0;
@@ -38,7 +38,8 @@
 .markimage p {
    font-family: Georgia, serif;
    font-style: italic;
-   font-size: 12px;
+   font-size: 14px;
+   text-shadow: 0px 0px 2px black;
    position: relative;
    color: #fff;
    padding: 10px 20px 0px;
@@ -69,7 +70,7 @@
    transition: all 0.2s ease-in;
 }
 .second .markmask {
-   background-color: rgba(115,146,184, 0.7);
+   background-color: rgba(115,146,184, .95);
    width: 460px;
    padding: 60px;
    height: 460px;
@@ -185,9 +186,9 @@
    overflow: hidden;
    position: relative;
    text-align: center;
-   -webkit-box-shadow: 1px 1px 2px #e6e6e6;
-   -moz-box-shadow: 1px 1px 2px #e6e6e6;
-   box-shadow: 1px 1px 2px #e6e6e6;
+   -webkit-box-shadow: 1px 1px 3px #aaa;
+   -moz-box-shadow: 1px 1px 3px #aaa;
+   box-shadow: 1px 1px 3px #aaa;
    cursor: default;
 }
 .codeimage .codemask,.codeimage .codecontent {
@@ -205,9 +206,10 @@
 .codeimage h2 {
    text-transform: uppercase;
    color: #fff;
+   text-shadow: 0px 0px 2px black;
    text-align: center;
    position: relative;
-   font-size: 17px;
+   font-size: 23px;
    padding: 10px;
    background: rgba(0, 0, 0, 0.8);
    margin: 20px 0 0 0;
@@ -215,7 +217,8 @@
 .codeimage p {
    font-family: Georgia, serif;
    font-style: italic;
-   font-size: 12px;
+   text-shadow: 0px 0px 2px black;
+   font-size: 17px;
    position: relative;
    color: #fff;
    padding: 10px 20px 20px;
@@ -245,7 +248,7 @@
    transition: all 0.4s ease-in-out 0.5s;
 }
 .sixth .codemask {
-   background-color: rgba(146,96,91,0.5);
+   background-color: rgba(146,96,91,0.7);
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;
