--- a/views/coding.ejs
+++ b/views/coding.ejs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/hover.css">
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lobster|Orbitron|Lato:100,300,400,900' rel='stylesheet' type='text/css'>
 	<script src="/jquery-2.1.3.min.js"></script>
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<script src="/jquery.lettering.js"></script>
@@ -32,7 +32,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 style="text-align:center;font-size:3.5vw; margin-top:4%;margin-bottom:4%;">Coding Projects</h1>
+					<h1 style="font-family:'Orbitron', sans-serif;text-align:center;font-size:3.5vw; margin-top:4%;margin-bottom:4%;">Coding Projects</h1>
 				</div>
 			</div>
 			<div class="row" style="margin-bottom:4%;">
@@ -90,7 +90,7 @@
 						      <div class="modal-header">
 						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						        <h3 class="modal-title" id="myModalLabel">MBR Foods</h3>
-						        <h5>MBR Foods is an ecommerce site built on the LAMP stack. The CSS may be a bit rough, but everything is working except I disabled the ability to place an order. The navbar is also persistant so it knows if you're logged in or not. If you want to play around with the admin features to add/edit an item, please let me know and I'll give you the login. You may want to open this one in a full window, since it's not mobile optimized.</h5>
+						        <h5>MBR Foods is an ecommerce site built on the LAMP stack. The CSS may be a bit rough, but everything is working except I disabled the ability to place an order. The navbar is also persistent so it knows if you're logged in or not. If you want to play around with the admin features to add/edit an item, please let me know and I'll give you the login. You may want to open this one in a full window, since it's not mobile optimized.</h5>
 						      </div>
 						      <div class="modal-body">
 						        <div class="container-fluid">
