--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/hover.css">
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lobster|Orbitron|Lato:100,300,400,900' rel='stylesheet' type='text/css'>
 	<script src="/jquery-2.1.3.min.js"></script>
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<script src="/jquery.lettering.js"></script>
@@ -53,10 +53,11 @@
 						<h2 class="tlt" style="margin-left:50%;font-size:3vw;font-weight:300;color:white;">
 							<ul class="texts">
 						        <li data-out-effect="fadeOut" data-out-shuffle="true">Experienced Marketer</li>   
-						        <li data-in-effect="fadeIn">Full Stack Web Developer</li>
+						        <li data-in-effect="fadeIn" data-out-effect="bounceOut">Full Stack Web Developer</li>
 						        <li data-in-effect="rotateIn" data-out-effect="flipOutX" data-out-shuffle="true">San Francisco Giants Fan</li>
 						    </ul>
 						</h2>
+						<a href="#" id="readmore"><h3 class="readmore" style="margin-left:50%;font-size:2vw;font-weight:300;color:white;">read more</h3></a>
 					</div>
 				</div>
 			</div>
@@ -70,15 +71,19 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6" style="margin-bottom:4%;">
-						<h3 style="font-family:'Brush Script MT';font-size:3.5vw;margin-bottom:2%;">Marketing</h3>
+						<h3 style="font-family:'Lobster',cursive;font-size:3.8vw;margin-bottom:2%;">Marketing</h3>
 						<a href="/marketing" class="animsition-link"><div id="marketing">
-							<div class="mask"></div>
+							<div class="mask">
+								<span class="glyphicon glyphicon-shopping-cart" style="position:relative;top:-25px;color:white;font-size:50px;"aria-hidden="true"></span>
+							</div>
 						</div></a>
 					</div>
 					<div class="col-md-6" style="margin-bottom:4%;">
-						<h3 style="font-family:'Andale Mono';font-size:3.5vw;margin-bottom:2%;">Coding</h3>
+						<h3 style="font-family:'Orbitron', sans-serif;font-size:3.8vw;margin-bottom:2%;">Coding</h3>
 						<a href="/coding"><div id="coding">
-							<div class="mask"></div>
+							<div class="mask">
+								<i class="fa fa-laptop" style="position:relative;top:-25px;color:white;font-size:50px;"></i>
+							</div>
 						</div></a>
 					</div>
 				</div>
