--- a/views/marketing.ejs
+++ b/views/marketing.ejs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/hover.css">
 	<link rel="stylesheet" type="text/css" href="/style.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lobster|Orbitron|Lato:100,300,400,900' rel='stylesheet' type='text/css'>
 	<script src="/jquery-2.1.3.min.js"></script>
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<script src="/jquery.lettering.js"></script>
@@ -32,7 +32,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 style="text-align:center;font-size:3.5vw; margin-top:4%;margin-bottom:4%;">Marketing Projects</h1>
+					<h1 style="font-family:'Lobster',cursive;text-align:center;font-size:3.8vw; margin-top:4%;margin-bottom:4%;">Marketing Projects</h1>
 				</div>
 			</div>
 			<div class="row" style="text-align:center; margin-bottom:4%;">
@@ -285,7 +285,7 @@
 						      <div class="modal-header">
 						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						        <h3 class="modal-title" id="myModalLabel">ASUS Mall Tour</h3>
-						        <h5>November 2013 - January 2014. I led the campaign for the first nationwide mall tour for ASUS North America in 10 Westfield malls across the country. With a budget of only $500,000, I was able to secure a staffing agency, production agency for fixtures, rental space, and shipping costs. Overall, the campaign saw over 80,000 on hand demonstrations over the 8 week period.</h5>
+						        <h5>November 2013 - January 2014. I led the campaign for the first nationwide mall tour for ASUS North America in 10 Westfield malls across the country. With a budget of only $500,000, I was able to secure a staffing agency, production agency for fixtures, rental space, and shipping costs. Overall, the campaign saw over 5 million mass impressions and 22,000 on hand demonstrations.</h5>
 						      </div>
 						      <div class="modal-body">
 						        <div class="container-fluid">
