added github contact

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,6 @@
+body{
+	font-family: 'Lato', sans-serif;
+}
 .navbar.navbar-default{
 	background-color: rgba(255,255,255,0.3);
 	/*background: transparent;*/
