--- a/views/about.ejs
+++ b/views/about.ejs
@@ -51,13 +51,14 @@
 				<div class="col-md-4" style="text-align:right;">
 					<h2 style="font-size:3vw;">Contact</h2>
 					<p><b>Email: </b><a href="mailto:btsao028@gmail.com">btsao028@gmail.com</a></p>
+				    <p><a href="https://github.com/bentsao28" style="color:black;"><i class="fa fa-github" style="font-size:100px;"></i></a></p>
 					<a href="https://www.linkedin.com/in/bentsao">
 				          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Ben Tsao's profile on LinkedIn"></a>
 				</div>
 			</div>
 		</div>
 		<footer class="footer">
-			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a></h5>
+			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a>&nbsp&nbsp<a href="https://github.com/bentsao28"><i class="fa fa-github"></i></a></h5>
 		 	<h5>Copyright &copy 2015 Ben Tsao</h5>
 		</footer>
 	</div>
