--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,7 @@
 	      </button>
 	      <a class="navbar-brand" href="mailto:btsao028@gmail.com"><i class="fa fa-envelope" style="color:white;"></i></a>
 	      <a class="navbar-brand" href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square" style="color:white;"></i></a>
+	      <a class="navbar-brand" href="https://github.com/bentsao28"><i class="fa fa-github" style="color:white;"></i></a>
 	    </div>
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -100,7 +101,7 @@
 			</div>
 		</div>
 		<footer class="footer">
-			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a></h5>
+			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a>&nbsp&nbsp<a href="https://github.com/bentsao28"><i class="fa fa-github"></i></a></h5>
 		 	<h5>Copyright &copy 2015 Ben Tsao</h5>
 		</footer>
 	</div>
