--- a/views/coding.ejs
+++ b/views/coding.ejs
@@ -78,6 +78,7 @@
 						      </div>
 						      <div class="modal-footer" style="text-align:center;">
 						      	<a href="http://www.adscope.info"><button type="button" class="btn btn-primary">Go there!</button></a>
+						      	<a href="https://github.com/bentsao28/adscope"><button type="button" class="btn btn-success">GitHub</button></a>
 						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						      </div>
 						    </div>
@@ -117,6 +118,7 @@
 						      </div>
 						      <div class="modal-footer" style="text-align:center;">
 						      	<a href="http://52.8.119.57/"><button type="button" class="btn btn-primary">Go there!</button></a>
+						      	<a href="https://github.com/bentsao28/ecommerce_ci"><button type="button" class="btn btn-success">GitHub</button></a>
 						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						      </div>
 						    </div>
@@ -158,6 +160,7 @@
 						      </div>
 						      <div class="modal-footer" style="text-align:center;">
 						      	<a href="http://www.bentsao.org"><button type="button" class="btn btn-primary">Go there!</button></a>
+						      	<a href="https://github.com/bentsao28/store"><button type="button" class="btn btn-success">GitHub</button></a>
 						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						      </div>
 						    </div>
@@ -197,6 +200,7 @@
 						      </div>
 						      <div class="modal-footer" style="text-align:center;">
 						      	<a href="http://www.bentsao.info"><button type="button" class="btn btn-primary">Go there!</button></a>
+						      	<a href="https://github.com/bentsao28/chat"><button type="button" class="btn btn-success">GitHub</button></a>
 						        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						      </div>
 						    </div>
@@ -207,7 +211,7 @@
 			</div>
 		</div>
 		<footer class="footer">
-			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a></h5>
+			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a>&nbsp&nbsp<a href="https://github.com/bentsao28"><i class="fa fa-github"></i></a></h5>
 		 	<h5>Copyright &copy 2015 Ben Tsao</h5>
 		</footer>
 	</div>
