--- a/views/marketing.ejs
+++ b/views/marketing.ejs
@@ -406,7 +406,7 @@
 			</div>
 		</div>
 		<footer class="footer">
-			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a></h5>
+			<h5>Contact: <a href="mailto:btsao028@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp&nbsp<a href="https://www.linkedin.com/in/bentsao"><i class="fa fa-linkedin-square"></i></a>&nbsp&nbsp<a href="https://github.com/bentsao28"><i class="fa fa-github"></i></a></h5>
 		 	<h5>Copyright &copy 2015 Ben Tsao</h5>
 		</footer>
 	</div>
