--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="/animsition.min.css">
 	<link rel="stylesheet" href="/hover.css">
 	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="shortcut icon" href="/images/favicon.ico">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster|Orbitron|Lato:100,300,400,900' rel='stylesheet' type='text/css'>
 	<script src="/jquery-2.1.3.min.js"></script>
