--- a/views/marketing.ejs
+++ b/views/marketing.ejs
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="/animsition.min.css">
 	<link rel="stylesheet" href="/hover.css">
 	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="shortcut icon" href="/images/favicon.ico">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster|Orbitron|Lato:100,300,400,900' rel='stylesheet' type='text/css'>
 	<script src="/jquery-2.1.3.min.js"></script>
@@ -132,7 +133,7 @@
 						      <div class="modal-header">
 						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						        <h3 class="modal-title" id="myModalLabel">Online Stuff</h3>
-						        <h5>Various webpages and landing pagess. I've got a lot more, but I don't want to overload your bandwidth, so if you want to see more, just ask!</h5>
+						        <h5>Various webpages and landing pages. I've got a lot more, but I don't want to overload your bandwidth, so if you want to see more, just ask!</h5>
 						      </div>
 						      <div class="modal-body">
 						        <div class="container-fluid">
