--- a/views/about.ejs
+++ b/views/about.ejs
@@ -47,7 +47,7 @@
 					<p style="font-size:1.3vw;">My name is Ben and I've been doing tech marketing for the last 5 years or so. Recently, I realized that a particular set of skills would help me in order to truly make it out here in Silicon Valley. As a Bay Area native, I wasn't going anywhere. I have always been interested in coding, but never had the time to learn due to work and other commitments.</p>
 					<p style="font-size:1.3vw;">Then I heard about coding bootcamps where they specialize in teaching people how to become developers in under 3 months. I applied to a few and ended up choosing Coding Dojo because they did not require any prior programming experience. That was great for a novice like me since they would teach three full stacks, whatever that meant. :) It ended up being a great decision, and I learned a bunch of fun, useful stuff including how to put together this website you're on now from scratch.</p>
 					<p style="font-size:1.3vw;">My passion for marketing is as strong as ever and I consider that to be my main expertise. And now with the background of a web developer, I feel that I can do so much more than before. Other interests include: good food, playing video games, working out, and baseball (go Giants!).</p>
-					<p style="font-size:1.3vw; font-style:italic; font-weight:100;">Programming specialities include: Javascript, Node.js, AngularJS, PHP, HTML, CSS, and Ruby on Rails (in progress)</p>
+					<p style="font-size:1.3vw; font-style:italic; font-weight:100;">Programming specialities include: Javascript, Node.js, AngularJS, PHP, Ruby on Rails, HTML, and CSS</p>
 				</div>
 				<div class="col-md-4" style="text-align:right;">
 					<h2 style="font-size:3vw;">Contact</h2>
